# system_monitor

./: .gitignore
backend/: CMakeLists.txt
backend/src/: main.c
